Handle continue button focus

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -534,6 +534,8 @@
     const btn = document.getElementById("submit-btn");
     btn.classList.remove("disabled");
     btn.removeAttribute("disabled")
+
+    btn.focus()
   }
 
   function submit() {
