Fix focus after the charity selection

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -493,7 +493,7 @@
       replaceChildren(list, [selectedCharity]);
       selectedCharity.classList.add("selected");
 
-      document.getElementById("tiers-container").querySelector("li.tier .tier-item").focus()
+      document.getElementById("how-much-title").focus()
     } catch (e) {
       reportError(e);
     }
