--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -407,7 +407,7 @@
   function fetchData() {
     // Use this URL to get actual data
     // const url = "https://api.dev.platform.pagopa.it/donations/availabledonations";
-    const url = "http://192.168.1.54:3000/donations/availabledonations";
+    const url = "http://localhost:3000/donations/availabledonations";
     return fetch(url).then(res => res.json());
   }
 
