Removed `How much` outline

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -143,6 +143,10 @@
         border-top: 1px solid var(--bluegrey-light);
     }
 
+    #how-much-title {
+      outline: none;
+    }
+
     li.tier {
         justify-self: center;
         width: 100%;
