--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -398,7 +398,7 @@
     </p>
   </div>
 
-  <div id="privacy" class="privacy hidden">
+  <div id="privacy" class="privacy hidden" data-checkconfig="privacyUrl">
     Proseguendo dichiari di aver letto e compreso i <a href="#" onclick="openPrivacyUrl(event)">Termini e condizioni d’uso e l’Informativa Privacy</a>
   </div>
 </section>
@@ -412,8 +412,8 @@
   let allCharities = "";
 
   const config = {
-    // apiUrl: "https://api.uat.platform.pagopa.it/donations/api/v1/availabledonations",
-    apiUrl: "http://localhost:3000/donations/availabledonations",
+    apiUrl: "https://api.uat.platform.pagopa.it/donations/api/v1/availabledonations",
+    // apiUrl: "http://localhost:3000/donations/availabledonations",
     privacyUrl: "https://pagopa.gov.it/privacy-policy-donazioni-ucraina"
   };
 
@@ -502,7 +502,7 @@
       info.classList.remove("hidden");
 
       const privacy = document.getElementById("privacy");
-      privacy.classList.remove("hidden");
+      if (privacy) privacy.classList.remove("hidden");
 
       const instructions = document.getElementById("instructions");
       instructions.classList.add("hidden");
@@ -648,7 +648,14 @@
       reportError(e);
     });
 
+    // Hide all the elements that have a `data-checkconfig`
+    // attribute which is not present inside the config object.
+    document.querySelectorAll("[data-checkconfig]").forEach(el => {
+      const watchedConfig = el.dataset.checkconfig;
 
+      if (!!watchedConfig && !config[watchedConfig])
+        el.remove()
+    })
   }
 </script>
 </html>
