Set `privacyUrl` to `null`

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -420,7 +420,7 @@
 
   const config = {
     apiUrl: "https://api.uat.platform.pagopa.it/donations/api/v1/availabledonations",
-    privacyUrl: "https://pagopa.gov.it/privacy-policy-donazioni-ucraina"
+    privacyUrl: null
   };
 
   function replaceChildren(target, children) {
