--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -419,7 +419,7 @@
   let allCharities = "";
 
   const config = {
-    apiUrl: "https://api.uat.platform.pagopa.it/donations/api/v1/availabledonations",
+    apiUrl: "http://localhost:3000/donations/availabledonations",
     privacyUrl: null
   };
 
