Restored loading padding and changed `apiUrl` for dev

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -306,6 +306,7 @@
     #loader {
         display: flex;
         align-items: center;
+        padding-bottom: 24px;
     }
 
     #loader p {
@@ -419,7 +420,7 @@
   let allCharities = "";
 
   const config = {
-    apiUrl: "http://localhost:3000/donations/availabledonations",
+    apiUrl: "/donations/availabledonations",
     privacyUrl: null
   };
 
