--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -42,6 +42,7 @@
     }
 
     h1, h2, p, a, span, label, button {
+        font-family: "Titillium Web", sans-serif;
         font-style: normal;
         letter-spacing: 0px;
         text-align: left;
