fixes to normal login flow

--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -86,7 +86,7 @@
   <h1 style="font-size: 50px;"><a href="https://github.com/pagopa/io-dev-api-server">io-dev-api-server</a></h1>
   <img src="assets/imgs/how_to_login.png" width="100%">
   <div style="width: 100%; margin-top: 30px">
-    <a href="/login?authorized=1"
+    <a href="/idp-login?authorized=1"
        id="login-link"
        style="padding: 16px; font-size: 50px; color: white; background-color: #0073E6; text-decoration: none;">
       LOGIN</a>
