removed toast position

--- a/assets/html/myportal_playground.html
+++ b/assets/html/myportal_playground.html
@@ -44,13 +44,11 @@
             const payload = {
                 "it": {
                     "text": "Attenzione",
-                    "type": "warning",
-                    "position": "bottom"
+                    "type": "warning"
                 },
                 "en": {
                     "text": "Warning",
-                    "type": "warning",
-                    "position": "bottom"
+                    "type": "warning"
                 }
             };
             showToast(payload);
