--- a/assets/wallet/wallet_onboarding.html
+++ b/assets/wallet/wallet_onboarding.html
@@ -13,7 +13,7 @@
         }
 
         function onLoad() {
-            const options = outcomeList.map(v => `<option value="${v[0]}">${v[1]}</option>`).join();
+            const options = outcomeList.map(v => `<option value="${v[0]}">${v[0]} - ${v[1]}</option>`).join();
             const select = `<select id="outcomeSelect" style="width: 400px;height: 60px;font-size: 32px">${options}</select>`;
             const container = document.getElementById("select_container");
             container.innerHTML = `<div>${select}</div>`;
