chore: add 1002 login error

--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -60,7 +60,8 @@
             ["27", "Utente già presente"],
             ["28", "Operazione annullata"],
             ["29", "Identità non erogata"],
-            ["1001", "Cittadino minore di 14 anni"]
+            ["1001", "Cittadino minore di 14 anni"],
+            ["1002", "Utente con identità bloccata da ioapp.it"]
         ];
 
         const simulateSpidError = () => {
