--- a/assets/wallet/wallet_onboarding.html
+++ b/assets/wallet/wallet_onboarding.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="application/javascript">
+    <script type="text/javascript">
         const outcomeList = [
             ["0", "SUCCESS"],
             ["1", "ERROR"]
@@ -10,7 +10,21 @@
         const simulateOutcome = () => {
             const container = document.getElementById("outcomeSelect");
             if (container.value === "0") {
-              window.location.href = `/outcomeView?outcome=${container.value}&walletId=100`;
+              fetch('http://192.168.1.204:3000/wallets/mock', {
+                method: 'POST',
+                body: JSON.stringify({
+                  paymentMethodId: "1",
+                }),
+                headers: new Headers({
+                  'Content-Type': 'application/json',
+                  'Accept': 'application/json'
+                })
+              })
+              .then(response => response.json())
+              .then(response => {
+                window.location.href = `/outcomeView?outcome=${container.value}&walletId=${response.walletId}`;
+              })
+              .catch(err => alert(err))
             } else {
               window.location.href = `/outcomeView?outcome=${container.value}`;
             }
