feat: [IOBP-283] new wallet onboarding apis (#310)
* chore: first implementation of new wallet onboarding

* chore: retrieve list of available payment methods from api request

* chore: adapted walletId as response in case of success

* chore: added another payment methods

* chore: added new apis to handle new wallet onboarding mocks

* chore: removed fixed ip address from fetch api

* chore: add get single wallet info api

* chore: added delete request for the onboarding new wallet

--- a/assets/wallet/wallet_onboarding.html
+++ b/assets/wallet/wallet_onboarding.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="application/javascript">
+    <script type="text/javascript">
         const outcomeList = [
             ["0", "SUCCESS"],
             ["1", "ERROR"]
@@ -9,7 +9,25 @@
 
         const simulateOutcome = () => {
             const container = document.getElementById("outcomeSelect");
-            window.location.href = `/outcomeView?outcome=${container.value}`;
+            if (container.value === "0") {
+              fetch('/wallets/mock', {
+                method: 'POST',
+                body: JSON.stringify({
+                  paymentMethodId: "1",
+                }),
+                headers: new Headers({
+                  'Content-Type': 'application/json',
+                  'Accept': 'application/json'
+                })
+              })
+              .then(response => response.json())
+              .then(response => {
+                window.location.href = `/outcomeView?outcome=${container.value}&walletId=${response.walletId}`;
+              })
+              .catch(err => alert(err))
+            } else {
+              window.location.href = `/outcomeView?outcome=${container.value}`;
+            }
         }
 
         function onLoad() {
