--- a/assets/wallet/wallet_onboarding.html
+++ b/assets/wallet/wallet_onboarding.html
@@ -12,12 +12,14 @@
         ];
 
         const simulateOutcome = () => {
+          const urlParams = new URLSearchParams(window.location.search);
+          const paymentMethodId = urlParams.get('paymentMethodId');
             const container = document.getElementById("outcomeSelect");
             if (container.value === "0") {
-              fetch('/wallets/mock', {
+              fetch('/payment-wallet/v1/wallets/mock', {
                 method: 'POST',
                 body: JSON.stringify({
-                  paymentMethodId: "1",
+                  paymentMethodId,
                 }),
                 headers: new Headers({
                   'Content-Type': 'application/json',
@@ -26,11 +28,11 @@
               })
               .then(response => response.json())
               .then(response => {
-                window.location.href = `/outcomeView?outcome=${container.value}&walletId=${response.walletId}`;
+                window.location.href = `/wallets/outcomes?outcome=${container.value}&walletId=${response.walletId}`;
               })
               .catch(err => alert(err))
             } else {
-              window.location.href = `/outcomeView?outcome=${container.value}`;
+              window.location.href = `/wallets/outcomes?outcome=${container.value}`;
             }
         }
 
