chore: added additional outcome to handle already onboarded metho

--- a/assets/wallet/wallet_onboarding.html
+++ b/assets/wallet/wallet_onboarding.html
@@ -8,7 +8,8 @@
             ["2", "AUTH_ERROR"],
             ["4", "TIMEOUT"],
             ["8", "CANCELED_BY_USER"],
-            ["14", "INVALID_SESSION"]
+            ["14", "INVALID_SESSION"],
+            ["15", "ALREADY_ONBOARDED"]
         ];
 
         const simulateOutcome = () => {
