--- a/assets/html/mail.html
+++ b/assets/html/mail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mail configuration</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script>
         function setIsEmailValidated(value){
             const element = document.getElementById("mailStatus");
