[IOBP-432] Add wallet payment authorization WebView (#325)
* refactor: idpay data

* fix: tests

* fix: tests

* feat: `wallet/ecommerce`

* chore: payments endpoints

* enpoints wip

* chore: psps endpoint

* chore: added payload

* chore: added payload

* refactor: move files

* chore: added comments

* feat: payment outcome

* refactor: wallet feature

* chore: remove unused file

* chore: fix comments

* refactor: moved onboarding

* fix: handlers

* chore: update API definitions

* chore: add wallet generation on start

* chore: added protocol

* fix: const

* revert `package.json`

---------

Co-authored-by: Alessandro Izzo <alessandro.izzo998@gmail.com>

--- a/assets/wallet/wallet_payment.html
+++ b/assets/wallet/wallet_payment.html
@@ -26,7 +26,7 @@
             const urlParams = new URLSearchParams(queryString);
             const transactionId = urlParams.get("transactionId");
             const container = document.getElementById("outcomeSelect");
-            window.location.href = `/ecommerce/io/v1/transactions/${transactionId}/outcomes?outcome=${container.value}`;
+            window.location.href = `iowallet://127.0.0.1:3000/ecommerce/io/v1/transactions/${transactionId}/outcomes?outcome=${container.value}`;
         }
 
         function onLoad() {
