POST message utility page

--- a/assets/html/homeDashboard.html
+++ b/assets/html/homeDashboard.html
@@ -7,5 +7,6 @@
     <body> 
         <include>assets/html/wallet2_config.html</include>
         <include>assets/html/mail.html</include>
+        <include>assets/html/messages.html</include>
     </body> 
 </html>
