chore: Added additional outcome into html page

--- a/assets/wallet/wallet_onboarding.html
+++ b/assets/wallet/wallet_onboarding.html
@@ -9,7 +9,8 @@
             ["4", "TIMEOUT"],
             ["8", "CANCELED_BY_USER"],
             ["14", "INVALID_SESSION"],
-            ["15", "ALREADY_ONBOARDED"]
+            ["15", "ALREADY_ONBOARDED"],
+            ["16", "BPAY_NOT_FOUND"]
         ];
 
         const simulateOutcome = () => {
