chore: show error numbers in description too

--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="application/javascript">
+    <script type="application/javascript">            
         const spidErrors = [
             ["2", "Indisponibilità sistema"],
             ["3", "Errore di sistema"],
@@ -13,55 +13,55 @@
             ["9", "Parametro version non presente, malformato o diverso da  ‘2.0’"],
             [
                 "10",
-                "Issuer non presente, malformato o non corrispondete all'entità che sottoscrive la richiesta"
+                "10 - Issuer non presente, malformato o non corrispondete all'entità che sottoscrive la richiesta"
             ],
             [
                 "11",
-                "ID (Identificatore richiesta)  non presente, malformato o non conforme"
+                "11 - ID (Identificatore richiesta)  non presente, malformato o non conforme"
             ],
             [
                 "12",
-                "RequestAuthnContext non presente, malformato  o non previsto da SPID"
+                "12 - RequestAuthnContext non presente, malformato  o non previsto da SPID"
             ],
             [
                 "13",
-                "IssueInstant non presente, malformato o non coerente con l'orario di arrivo della richiesta"
+                "13 - IssueInstant non presente, malformato o non coerente con l'orario di arrivo della richiesta"
             ],
             [
                 "14",
-                "destination non presente, malformata o non coincidente con ill Gestore delle identità ricevente la richiesta"
+                "14 - destination non presente, malformata o non coincidente con ill Gestore delle identità ricevente la richiesta"
             ],
-            ["15", "attributo isPassivepresente e attualizzato al valore true"],
-            ["16", "AssertionConsumerServicenon correttamente valorizzato "],
+            ["15", "15 - attributo isPassivepresente e attualizzato al valore true"],
+            ["16", "16 - AssertionConsumerServicenon correttamente valorizzato "],
             [
                 "17",
-                "Attributo Formatdell'elemento NameIDPolicy assente o non valorizzato secondo specifica"
+                "17 - Attributo Formatdell'elemento NameIDPolicy assente o non valorizzato secondo specifica"
             ],
             [
                 "18",
-                "AttributeConsumerServiceIndex malformato o che riferisce a un valore non registrato nei metadati di SP"
+                "18 - AttributeConsumerServiceIndex malformato o che riferisce a un valore non registrato nei metadati di SP"
             ],
             [
                 "19",
-                "Autenticazione fallita per ripetuta sottomissione di credenziali errate (superato numero  tentativi secondo le policy adottate) "
+                "19 - Autenticazione fallita per ripetuta sottomissione di credenziali errate (superato numero  tentativi secondo le policy adottate) "
             ],
             [
                 "20",
-                "Utente privo di credenziali compatibili con il livello richiesto dal fornitore del servizio "
+                "20 - Utente privo di credenziali compatibili con il livello richiesto dal fornitore del servizio "
             ],
             ["21", "Timeout durante l’autenticazione utente"],
             [
                 "22",
-                "Utente nega il consenso all’invio di dati al SP in caso di sessione vigente "
+                "22 - Utente nega il consenso all’invio di dati al SP in caso di sessione vigente "
             ],
-            ["23", "Utente con identità sospesa/revocata o con credenziali bloccate "],
-            ["25", "Processo di autenticazione annullato dall’utente"],
-            ["26", "Processo di erogazione dell’identità digitale andata a buon fine"],
-            ["27", "Utente già presente"],
-            ["28", "Operazione annullata"],
-            ["29", "Identità non erogata"],
-            ["1001", "Cittadino minore di 14 anni"],
-            ["1002", "Utente con identità bloccata da ioapp.it"]
+            ["23", "23 - Utente con identità sospesa/revocata o con credenziali bloccate"],
+            ["25", "25 - Processo di autenticazione annullato dall’utente"],
+            ["26", "26 - Processo di erogazione dell’identità digitale andata a buon fine"],
+            ["27", "27 - Utente già presente"],
+            ["28", "28 - Operazione annullata"],
+            ["29", "29 - Identità non erogata"],
+            ["1001", "1001 - Cittadino minore di 14 anni"],
+            ["1002", "1002 - Utente con identità bloccata da ioapp.it"]
         ];
 
         const simulateSpidError = () => {
