chore: Added missing outcome into payments dropdown webview

--- a/assets/wallet/wallet_payment.html
+++ b/assets/wallet/wallet_payment.html
@@ -21,6 +21,8 @@
             ["14", "INVALID_SESSION"],
             ["15", "METHOD_NOT_ENABLED"],
             ["17", "WAITING_CONFIRMATION_EMAIL"],
+            ["18", "PAYMENT_REVERSED"],
+            ["19", "PAYPAL_REMOVED_ERROR"],
         ];
 
         const simulateOutcome = () => {
