chore: Add outcome 99 into mock webview payment page

--- a/assets/wallet/wallet_payment.html
+++ b/assets/wallet/wallet_payment.html
@@ -23,6 +23,7 @@
             ["17", "WAITING_CONFIRMATION_EMAIL"],
             ["18", "PAYMENT_REVERSED"],
             ["19", "PAYPAL_REMOVED_ERROR"],
+            ["99", "BE_NODE_KO"],
             ["116", "INSUFFICIENT_AVAILABILITY_ERROR"],
             ["117", "CVV_ERROR"],
             ["121", "PLAFOND_LIMIT_ERROR"]
