chore: Added `PSP_ERROR_ONBOARDING` and `BE_KO` payment onboarding outcome

--- a/assets/wallet/wallet_onboarding.html
+++ b/assets/wallet/wallet_onboarding.html
@@ -10,7 +10,9 @@
             ["8", "CANCELED_BY_USER"],
             ["14", "INVALID_SESSION"],
             ["15", "ALREADY_ONBOARDED"],
-            ["16", "BPAY_NOT_FOUND"]
+            ["16", "BPAY_NOT_FOUND"],
+            ["25", "PSP_ERROR_ONBOARDING"],
+            ["99", "BE_KO"]
         ];
 
         const simulateOutcome = () => {
