--- a/assets/wallet/wallet_payment.html
+++ b/assets/wallet/wallet_payment.html
@@ -4,7 +4,7 @@
 <head>
     <script type="text/javascript">
         const outcomeList = [
-            ["0", "SUCCESS"],
+            ["0", "SUCCESS - PAA_PAGAMENTO_DUPLICATO"],
             ["1", "GENERIC_ERROR"],
             ["2", "AUTH_ERROR"],
             ["3", "INVALID_DATA"],
@@ -12,16 +12,16 @@
             ["5", "CIRCUIT_ERROR"],
             ["6", "MISSING_FIELDS"],
             ["7", "INVALID_CARD"],
-            ["8", "CANCELED_BY_USER"],
-            ["9", "DUPLICATE_ORDER"],
+            ["8", "CANCELED_BY_USER - PAA_PAGAMENTO_ANNULLATO"],
+            ["9", "DUPLICATE_ORDER - PAA_PAGAMENTO_IN_CORSO"],
             ["10", "EXCESSIVE_AMOUNT"],
-            ["11", "ORDER_NOT_PRESENT"],
+            ["11", "ORDER_NOT_PRESENT - PAA_PAGAMENTO_SCONOSCIUTO"],
             ["12", "INVALID_METHOD"],
             ["13", "KO_RETRIABLE"],
             ["14", "INVALID_SESSION"],
             ["15", "METHOD_NOT_ENABLED"],
             ["17", "WAITING_CONFIRMATION_EMAIL"],
-            ["18", "PAYMENT_REVERSED"],
+            ["18", "PAYMENT_REVERSED - PAA_PAGAMENTO_SCADUTO"],
             ["19", "PAYPAL_REMOVED_ERROR"],
             ["25", "PSP_ERROR"],
             ["99", "BE_NODE_KO"],
@@ -29,6 +29,19 @@
             ["117", "CVV_ERROR"],
             ["121", "PLAFOND_LIMIT_ERROR"]
         ];
+
+        const updatePaymentFromMessageIfNeeded = (outcome) => {
+            // Async promise to support payment outcome when starting
+            // from messages. This is just a workaround that does not
+            // resemble in any way what happens in production.
+            fetch(`/api/v1/messages/private/finalizePayment?outcome=${outcome}`, {
+                method: 'POST',
+                headers: new Headers({
+                'Content-Type': 'application/json',
+                'Accept': 'application/json'
+                })
+            }).catch(() => undefined);
+        }
 
         const simulateOutcome = () => {
             const queryString = location.search;
@@ -48,16 +61,18 @@
               })
               .then(response => response.json())
               .then(response => {
+                updatePaymentFromMessageIfNeeded(container.value);
                 window.location = `iowallet://127.0.0.1:3000/ecommerce/io/v1/transactions/${transactionId}/outcomes?outcome=${container.value}`;
               })
               .catch(err => alert(err))
             } else {
+                updatePaymentFromMessageIfNeeded(container.value);
                 window.location.href = `iowallet://127.0.0.1:3000/ecommerce/io/v1/transactions/${transactionId}/outcomes?outcome=${container.value}`;
             }
         }
 
         function onLoad() {
-             const options = outcomeList.map(v => `<option value="${v[0]}">${v[0]} - ${v[1]}</option>`).join();
+            const options = outcomeList.map(v => `<option value="${v[0]}">${v[0]} - ${v[1]}</option>`).join();
             const select = `<select id="outcomeSelect" style="width: 400px;height: 60px;font-size: 32px">${options}</select>`;
             const container = document.getElementById("select_container");
             container.innerHTML = `<div>${select}</div>`;
