payment on messages V2

--- a/assets/wallet/wallet_payment.html
+++ b/assets/wallet/wallet_payment.html
@@ -6,8 +6,8 @@
         const outcomeList = [
             ["0", "SUCCESS - PAA_PAGAMENTO_DUPLICATO"],
             ["1", "GENERIC_ERROR"],
-            ["2", "AUTH_ERROR"],
-            ["3", "INVALID_DATA"],
+            ["2", "AUTH_ERROR - PPT_AUTENTICAZIONE"],
+            ["3", "INVALID_DATA - PPT_ERRORE_EMESSO_DA_PAA"],
             ["4", "TIMEOUT"],
             ["5", "CIRCUIT_ERROR"],
             ["6", "MISSING_FIELDS"],
