ongoing mapped to KO_RETRIABLE

--- a/assets/wallet/wallet_payment.html
+++ b/assets/wallet/wallet_payment.html
@@ -13,11 +13,11 @@
             ["6", "MISSING_FIELDS"],
             ["7", "INVALID_CARD"],
             ["8", "CANCELED_BY_USER - PAA_PAGAMENTO_ANNULLATO"],
-            ["9", "DUPLICATE_ORDER - PAA_PAGAMENTO_IN_CORSO"],
+            ["9", "DUPLICATE_ORDER"],
             ["10", "EXCESSIVE_AMOUNT"],
             ["11", "ORDER_NOT_PRESENT - PAA_PAGAMENTO_SCONOSCIUTO"],
             ["12", "INVALID_METHOD"],
-            ["13", "KO_RETRIABLE"],
+            ["13", "KO_RETRIABLE - PAA_PAGAMENTO_IN_CORSO"],
             ["14", "INVALID_SESSION"],
             ["15", "METHOD_NOT_ENABLED"],
             ["17", "WAITING_CONFIRMATION_EMAIL"],
