--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -62,6 +62,7 @@
             ["29", "29 - Identità non erogata"],
             ["1001", "1001 - Cittadino minore di 14 anni"],
             ["1002", "1002 - Utente con identità bloccata da ioapp.it"],
+            ["NOT_SAME_CF", "NOT_SAME_CF - L'utente prova a loggarsi nel flusso di login a sessione attiva con un CF differente da quello salvato"],
             ["CIEID_OPERATION_CANCEL", "CIEID_OPERATION_CANCEL - Operazione annullata"],
             ["errorMessage:Missing SAMLResponse in ACS", "SAML_RESPONSE_ERROR_MESSAGE - Missing SAMLResponse in ACS"],
         ];
