--- a/assets/html/homeDashboard.html
+++ b/assets/html/homeDashboard.html
@@ -8,5 +8,6 @@
         <include>assets/html/wallet2_config.html</include>
         <include>assets/html/mail.html</include>
         <include>assets/html/messages.html</include>
+        <include>assets/html/send.html</include>
     </body> 
 </html>
