--- a/assets/html/send.html
+++ b/assets/html/send.html
@@ -4,6 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Messages</title>
+    <style>
+        .aar-table {
+            border-collapse: collapse;
+            margin-bottom: 16px;
+            width: calc(100%);
+            table-layout: fixed;
+        }
+        .aar-table thead {
+            background-color: lightgray;
+        }
+        .aar-table th, .aar-table td {
+            border: 1px solid #161616;
+            padding: 8px;
+            text-align: left;
+            overflow-wrap: break-word;
+        }
+        .col-generate { width: 12%; }
+        .col-clipboard { width: 12%; }
+        .col-iun { width: 18%; }
+        .col-qrcode { width: 58%; }
+    </style>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script>
         function retrieveAndShowQRCodeUrls() {
@@ -13,7 +34,10 @@
                 url: "/send/private/aars",
                 contentType: "application/json"
             }).done(function(data, textStatus, jqXHR) {                                
-                data.forEach(qrCodeContent => {
+                data.forEach(aar => {
+                    const notificationIUN = aar.notificationIUN;
+                    const qrCodeContent = aar.qrCodeContent;
+
                     const newRow = tableBody.insertRow();
 
                     const qrCodeLinkCell = newRow.insertCell();
@@ -31,6 +55,10 @@
                     })
                     qrCodeCopyCell.appendChild(copyButton);
 
+                    const notificationIUNCell = newRow.insertCell();
+                    const notificationIUNNode = document.createTextNode(notificationIUN);
+                    notificationIUNCell.appendChild(notificationIUNNode);
+
                     const qrCodeContentCell = newRow.insertCell();
                     const qrCodeContentNode = document.createTextNode(qrCodeContent);
                     qrCodeContentCell.appendChild(qrCodeContentNode);
@@ -47,16 +75,28 @@
 </head>
 
 <body>
-    <table id="sendAARQRCodeTable" style="padding:16px;border: 1px solid black;margin-top:16px">
-        <thead>
-            <tr>
-                <td>
-                    <b>SEND AAR QRCodes</b>
-                </td>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    <div style="margin:16px;margin-top:32px;"><b>SEND AAR QRCodes</b></div>
+    <div>
+        <table id="sendAARQRCodeTable" class="aar-table">
+            <thead>
+                <tr>
+                    <th class="col-generate">
+                        <b>Image</b>
+                    </th>
+                    <th class="col-clipboard">
+                        <b>Clipboard</b>
+                    </th>
+                    <th class="col-iun">
+                        <b>IUN</b>
+                    </th>
+                    <th class="col-qrcode">
+                        <b>QRCode Content</b>
+                    </th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </body>
 
 </html>
